test/src/test/k3s/dev/help/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: help
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: help
  template:
    metadata:
      labels:
        app.kubernetes.io/name: help
    spec:
      containers:
        - name: help
          image: docker.io/pierrezemb/gostatic
          imagePullPolicy: IfNotPresent
          args:
            - -port=8080
            - -path=/home/static
            - -enable-health
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          volumeMounts:
            - name: help
              mountPath: /home/static/index.html
              subPath: index.html
              readOnly: true
            - name: help
              mountPath: /home/static/help.html
              subPath: help.html
              readOnly: true
            - name: help
              mountPath: /home/static/overview.html
              subPath: overview.html
              readOnly: true
            - name: help
              mountPath: /home/static/inoa_bm_color.svg
              subPath: inoa_bm_color.svg
              readOnly: true
            - name: help
              mountPath: /home/static/inoa_wm_color.svg
              subPath: inoa_wm_color.svg
              readOnly: true
            - name: help
              mountPath: /home/static/developer-setups.svg
              subPath: developer-setups.svg
              readOnly: true
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 0
      volumes:
        - name: help
          configMap:
            name: help
