test/src/test/k3s/dev/help/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: help
spec:
  rules:
    - host: help.${k3s.ip}.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: help
                port:
                  name: http
